<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.QuizActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_title"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textAlignment="center"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/black"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_below="@id/title"/>
    <Button
        android:id="@+id/prevButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_margin="20dp"
        android:background="@android:color/white"
        android:layout_below="@id/title"
        android:padding="20dp"
        android:text="@string/prev" />

    <TextView
        android:id="@+id/numberOfTasks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:padding="20dp"
        android:text="Question \n1/5"
        android:layout_below="@id/title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

    <Button
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_below="@id/title"

        android:background="@android:color/white"
        android:padding="20dp"
        android:text="@string/next" />

    <TextView
        android:id="@+id/questionBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/nextButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:lines="3"
        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

    <RelativeLayout
        android:id="@+id/fragmentHolder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/questionBody"
        android:layout_centerHorizontal="true"/>











    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="200dp"
        android:background="@android:color/white"
        android:padding="20dp"
        android:text="@string/submit_button" />

    <Button android:id="@+id/restartQuiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:background="@android:color/white"
        android:layout_alignParentBottom="true"
        android:text="@string/restart_button"
        />

</RelativeLayout>